Add aux operators for rfp.round.

--- a/src/options/smt_options.toml
+++ b/src/options/smt_options.toml
@@ -522,3 +522,11 @@ name   = "SMT Layer"
   type       = "uint64_t"
   default    = "10000"
   help       = "timeout (in milliseconds) for satisfiability checks for timeout cores"
+
+[[option]]
+  name       = "fpToReal"
+  category   = "expert"
+  long       = "fp-to-real"
+  type       = "bool"
+  default    = "false"
+  help       = "translate floating-point to real arithmetic"
