--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -490,6 +490,8 @@ libcvc5_add_sources(
   theory/arith/nl/poly_conversion.h
   theory/arith/nl/pow2_solver.cpp
   theory/arith/nl/pow2_solver.h
+  theory/arith/nl/rfp_round_solver.cpp
+  theory/arith/nl/rfp_round_solver.h
   theory/arith/nl/stats.cpp
   theory/arith/nl/stats.h
   theory/arith/nl/strategy.cpp
