--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -91,6 +91,8 @@ libcvc5_add_sources(
   preprocessing/passes/ite_removal.h
   preprocessing/passes/ite_simp.cpp
   preprocessing/passes/ite_simp.h
+  preprocessing/passes/fp_to_real.cpp
+  preprocessing/passes/fp_to_real.h
   preprocessing/passes/learned_rewrite.cpp
   preprocessing/passes/learned_rewrite.h
   preprocessing/passes/miplib_trick.cpp
