Implementing a basic part of the RFP extended theory.
- Trying basic lemmas for some operators.
- Handling of the operators `RFP_ROUND` and `RFP_TO_RFP_FROM_RFP`.
- Bug fixes for the rounding operation.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -493,6 +493,8 @@ libcvc5_add_sources(
   theory/arith/nl/poly_conversion.h
   theory/arith/nl/pow2_solver.cpp
   theory/arith/nl/pow2_solver.h
+  theory/arith/nl/rfp_utils.cpp
+  theory/arith/nl/rfp_utils.h
   theory/arith/nl/rfp_solver.cpp
   theory/arith/nl/rfp_solver.h
   theory/arith/nl/rfp_round_solver.cpp
