Modify the RFP solver.
- Lazy learning for `rfp.div`.
- Modify the `rev_n` lemmas.
- Refactoring.
- Modify the default setting for `fp2r-ll` option.

--- a/src/options/smt_options.toml
+++ b/src/options/smt_options.toml
@@ -536,7 +536,7 @@ name   = "SMT Layer"
   category   = "expert"
   long       = "fp2r-ll=MODE"
   type       = "rfpLLMode"
-  default    = "WEAK"
+  default    = "STRONG"
   help       = "set the degree of lazy lemma learning"
   help_mode  = "Degree of lazy learning"
 [[option.mode.WEAK]]
